...
        Column(
            Modifier
                .height(310.dp)
                .verticalScroll(scrollState)
        ) {
            Text(
                text = "Nome Completo",
                fontWeight = FontWeight.Bold,
                fontSize = 20.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .align(Alignment.Start)
                    .padding(bottom = 5.dp)
...
                    unfocusedIndicatorColor = Color.Transparent
                ),
                shape = RoundedCornerShape(15),
                onValueChange = {
                    formState = formState.copy(nome = it)
                }, modifier = Modifier
                    .testTag("nome field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )

            Text(
                text = "Idade",
...
                    .testTag("idade field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )

            Text(
                text = "Cpf",
                fontWeight = FontWeight.Bold,
                fontSize = 20.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .align(Alignment.Start)
                    .padding(bottom = 5.dp)
...
                ),
                shape = RoundedCornerShape(15),
                visualTransformation = visualTransformation,
                onValueChange = {
                    formState = formState.copy(cpf = visualTransformation.sanitize(it))
                }, modifier = Modifier
                    .testTag("cpf field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )

            Text(
                text = "E-mail",
                fontWeight = FontWeight.Bold,
                fontSize = 20.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .align(Alignment.Start)
                    .padding(bottom = 5.dp)
...
                    unfocusedIndicatorColor = Color.Transparent
                ),
                shape = RoundedCornerShape(15),
                onValueChange = {
                    formState = formState.copy(email = it)
                }, modifier = Modifier
                    .testTag("email field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )

            Text(
                text = "Telefone",
...
                    .testTag("phone field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )

            Text(
                text = "Senha",
                fontWeight = FontWeight.Bold,
                fontSize = 20.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(bottom = 5.dp)
                    .align(Alignment.Start)
...
                    }
                },
                shape = RoundedCornerShape(15),
                onValueChange = {
                    formState = formState.copy(senha = it)
                }, modifier = Modifier
                    .testTag("senha field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )

            Text(
                text = "Confirmar Senha",
                fontWeight = FontWeight.Bold,
                fontSize = 20.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(bottom = 5.dp)
                    .align(Alignment.Start)
...
                    }
                },
                shape = RoundedCornerShape(15),
                onValueChange = {
                    formState = formState.copy(confirmarSenha = it)
                }, modifier = Modifier
                    .testTag("confirmar senha field")
                    .padding(bottom = 20.dp)
                    .fillMaxWidth()
            )
        }

        AnimatedVisibility(visible = isPassAndConfirmEquals) {
            Text(
                text = "Senhas devem ser iguais",
                fontWeight = FontWeight.Bold,
                color = Color.Red,
                fontSize = 15.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(bottom = 5.dp)
...
                    .offset(x = 0.dp, y = 0.dp)
            )
        }

        AnimatedVisibility(visible = !isPasswordValid) {
            Text(
                text = "Senha inválida",
                fontWeight = FontWeight.Bold,
                color = Color.Red,
                fontSize = 15.sp,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(bottom = 5.dp)
...

        Button(
            onClick = {
                onCreateNewUser(formState)
            },
            modifier = Modifier
                .testTag("enviar button")
                .align(Alignment.CenterHorizontally)
                .size(width = 170.dp, height = 50.dp),
            enabled = isFormFilled,
            shape = RoundedCornerShape(8.dp),
            colors = ButtonColors(
                containerColor = amparoButtonColor,
...
